--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint-plugin-react": "^7.13.0",
     "jest": "^24.8.0",
     "jest-expo": "^32.0.0",
+    "jest-fetch-mock": "^2.1.2",
     "jest-react-native": "^18.0.0",
     "react-test-renderer": "^16.8.6"
   },
