add unmwanted file in .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -7,5 +7,7 @@ npm-debug.*
 *.mobileprovision
 .env
 coverage
-yarn.lock
 ios
+yarn.lock
+__tests__/__snapshots__/*
+__tests__/screens/__snapshots__/*
